--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TrigguiApp</title>
+  <script src="bundle.js" defer></script>
+</head>
+<body>
+  <div id="root">Cargando TrigguiApp...</div>
+</body>
+</html>
