--- a/public/index.html
+++ b/public/index.html
@@ -1,140 +1,90 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TrigguiApp</title>
-    <style>
-      :root {
-        --color1: #ff6b6b;
-        --color2: #6bc2ff;
-        --color3: #ffe66d;
-        --color4: #6bffb1;
-        --logo-color: #333;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <title>TrigguiApp</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background-color: #fff;
+      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "Helvetica Neue", sans-serif;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
 
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'Segoe UI', sans-serif;
-      }
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      flex: 1;
+    }
 
-      body {
-        background: white;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        overflow: hidden;
-        text-align: center;
-      }
+    .button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.6rem;
+      font-weight: 600;
+      border: none;
+      cursor: pointer;
+      transition: all 0.25s ease;
+      color: white;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    }
 
-      .grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        gap: 10px;
-        width: 100vw;
-        height: 70vh;
-      }
+    .button:active {
+      transform: scale(0.98);
+      opacity: 0.9;
+    }
 
-      .block {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 1.8rem;
-        font-weight: bold;
-        color: white;
-        transition: all 0.3s ease;
-        cursor: pointer;
-        user-select: none;
-      }
+    .footer {
+      text-align: center;
+      padding: 10px 0 6px;
+      font-size: 0.8rem;
+      color: #999;
+      font-style: italic;
+    }
 
-      .block:nth-child(1) {
-        background: linear-gradient(135deg, var(--color1), #ff9999);
-      }
+    .imagotipo {
+      width: 60px;
+      height: 60px;
+      margin: 10px auto;
+      border-radius: 100%;
+      background-color: var(--main);
+      animation: breath 3s ease-in-out infinite;
+    }
 
-      .block:nth-child(2) {
-        background: linear-gradient(135deg, var(--color2), #99dcff);
-      }
+    .logo {
+      font-size: 1.2rem;
+      font-weight: 600;
+      letter-spacing: 0.05em;
+      color: #333;
+      margin-top: 4px;
+    }
 
-      .block:nth-child(3) {
-        background: linear-gradient(135deg, var(--color3), #fff199);
-      }
+    @keyframes breath {
+      0%, 100% { transform: scale(1); opacity: 0.8; }
+      50% { transform: scale(1.08); opacity: 1; }
+    }
+  </style>
+</head>
+<body>
 
-      .block:nth-child(4) {
-        background: linear-gradient(135deg, var(--color4), #99ffd0);
-      }
+  <div class="grid">
+    <button class="button" style="background-color:#FF6B6B;">Detente</button>
+    <button class="button" style="background-color:#4ECDC4;">Lee</button>
+    <button class="button" style="background-color:#1A535C;">Sorpresa</button>
+    <button class="button" style="background-color:#FFE66D; color:#333;">Conecta</button>
+  </div>
 
-      .block:active {
-        transform: scale(0.98);
-      }
+  <div class="imagotipo"></div>
+  <div class="logo">Triggui</div>
+  <div class="footer">Una pausa puede cambiarlo todo.</div>
 
-      .logo-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 5px;
-        animation: breathe 3s ease-in-out infinite;
-      }
-
-      .imagotipo {
-        width: 70px;
-        height: 70px;
-        border-radius: 50%;
-        background: var(--color1);
-        animation: breathe 3s ease-in-out infinite;
-      }
-
-      .logotipo {
-        font-size: 1.8rem;
-        font-weight: bold;
-        color: var(--logo-color);
-      }
-
-      .frase {
-        font-size: 0.9rem;
-        color: #666;
-        padding: 10px;
-        font-style: italic;
-        opacity: 0.7;
-      }
-
-      @keyframes breathe {
-        0%, 100% {
-          transform: scale(1);
-        }
-        50% {
-          transform: scale(1.08);
-        }
-      }
-
-      @media (max-width: 600px) {
-        .grid {
-          grid-template-columns: 1fr;
-          grid-template-rows: repeat(4, 1fr);
-        }
-        .block {
-          font-size: 1.5rem;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="grid">
-      <div class="block">Detente</div>
-      <div class="block">Lee</div>
-      <div class="block">¿?</div>
-      <div class="block">Conecta</div>
-    </div>
-
-    <div class="logo-container">
-      <div class="imagotipo"></div>
-      <div class="logotipo">Triggui</div>
-    </div>
-
-    <div class="frase">Abre un libro. Cualquier página. Un párrafo. Ahora.</div>
-  </body>
+</body>
 </html>
