--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -13,31 +12,35 @@
     html, body {
       margin: 0;
       padding: 0;
-      background: #fff;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: #fdfdfd;
+      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "Segoe UI", Roboto, sans-serif;
       height: 100vh;
       overflow: hidden;
       display: flex;
       flex-direction: column;
     }
+
     .loader {
       flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
-      animation: fadeOut 1.8s ease-out forwards;
-      background: white;
+      background: #ffffff;
       z-index: 9999;
+      animation: fadeOut 1.8s ease-out forwards;
     }
+
     .loader img {
       width: 80px;
       height: 80px;
       animation: pulse 1.8s ease-in-out forwards;
     }
+
     @keyframes pulse {
       0% { transform: scale(0); opacity: 0; }
       100% { transform: scale(1); opacity: 1; }
     }
+
     @keyframes fadeOut {
       0% { opacity: 1; }
       80% { opacity: 1; }
@@ -52,6 +55,7 @@
       padding-bottom: 12px;
       animation: fadeIn 2s ease-in forwards;
     }
+
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
@@ -66,35 +70,38 @@
       padding: 10px;
       margin-top: 10px;
     }
+
     .block {
       width: 44vw;
       height: 33vh;
       border-radius: 22px;
       color: white;
-      font-size: 1.1rem;
+      font-size: 1.15rem;
       font-weight: 600;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
-      box-shadow: 0 6px 14px rgba(0,0,0,0.15);
+      box-shadow: 0 8px 18px rgba(0,0,0,0.15);
       cursor: pointer;
       transition: transform 0.15s ease, opacity 0.15s ease;
-      animation: breathing 4s ease-in-out infinite;
+      animation: breathing 4.5s ease-in-out infinite;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.25);
     }
 
     .block:active {
-      transform: scale(0.95);
+      transform: scale(0.96);
       opacity: 0.88;
     }
 
     @keyframes breathing {
       0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.02); }
+      50% { transform: scale(1.015); }
     }
 
     .shock {
-      background-color: #6200EA;
+      background-color: #6a11cb;
+      background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
       color: white;
       font-weight: bold;
       border: none;
@@ -103,12 +110,12 @@
       margin: 10px auto;
       display: block;
       font-size: 0.95rem;
-      box-shadow: 0 3px 6px rgba(98, 0, 234, 0.4);
-      transition: background-color 0.3s ease;
+      box-shadow: 0 4px 8px rgba(106, 17, 203, 0.35);
+      transition: all 0.3s ease;
     }
 
     .shock.clicked {
-      background-color: #3700B3;
+      background-image: linear-gradient(to right, #11998e 0%, #38ef7d 100%);
     }
 
     .logo-wrapper {
@@ -138,10 +145,10 @@
 
   <div class="main" id="mainContent" style="display:none;">
     <div class="grid">
-      <div class="block" style="background: linear-gradient(to bottom right, #E96443, #904E95);">Detente</div>
-      <div class="block" style="background: linear-gradient(to bottom right, #2193b0, #6dd5ed);">Lee</div>
-      <div class="block" style="background: linear-gradient(to bottom right, #ff6e7f, #bfe9ff);">?</div>
-      <div class="block" style="background: linear-gradient(to bottom right, #00c3ff, #ffff1c); color: #000;">Conecta</div>
+      <div class="block" style="background: linear-gradient(135deg, #F2994A, #F2C94C);">Detente</div>
+      <div class="block" style="background: linear-gradient(135deg, #56CCF2, #2F80ED);">Lee</div>
+      <div class="block" style="background: linear-gradient(135deg, #667eea, #764ba2);">?</div>
+      <div class="block" style="background: linear-gradient(135deg, #11998e, #38ef7d);">Conecta</div>
     </div>
 
     <button class="shock" id="shockBtn">
