--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>TrigguiApp</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     html, body {
       margin: 0;
       padding: 0;
@@ -25,7 +23,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #ffffff;
+      background: white;
       z-index: 9999;
       animation: fadeOut 1.8s ease-out forwards;
     }
@@ -89,10 +87,7 @@
       text-shadow: 0 1px 2px rgba(0,0,0,0.25);
     }
 
-    .block:active {
-      transform: scale(0.96);
-      opacity: 0.88;
-    }
+    .block:active { transform: scale(0.96); opacity: 0.88; }
 
     @keyframes breathing {
       0%, 100% { transform: scale(1); }
@@ -100,8 +95,7 @@
     }
 
     .shock {
-      background-color: #6a11cb;
-      background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+      background: linear-gradient(to right, #6a11cb, #2575fc);
       color: white;
       font-weight: bold;
       border: none;
@@ -115,14 +109,26 @@
     }
 
     .shock.clicked {
-      background-image: linear-gradient(to right, #11998e 0%, #38ef7d 100%);
+      background: linear-gradient(to right, #11998e, #38ef7d);
+    }
+
+    .cover {
+      display: none;
+      justify-content: center;
+      margin: 10px auto 0;
+    }
+
+    .cover img {
+      width: 160px;
+      border-radius: 8px;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.15);
     }
 
     .logo-wrapper {
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-top: 6px;
+      margin-top: 10px;
       gap: 8px;
     }
 
@@ -146,9 +152,13 @@
   <div class="main" id="mainContent" style="display:none;">
     <div class="grid">
       <div class="block" style="background: linear-gradient(135deg, #F2994A, #F2C94C);">Detente</div>
-      <div class="block" style="background: linear-gradient(135deg, #56CCF2, #2F80ED);">Lee</div>
+      <div class="block" id="leeBtn" style="background: linear-gradient(135deg, #56CCF2, #2F80ED);">Lee</div>
       <div class="block" style="background: linear-gradient(135deg, #667eea, #764ba2);">?</div>
       <div class="block" style="background: linear-gradient(135deg, #11998e, #38ef7d);">Conecta</div>
+    </div>
+
+    <div class="cover" id="coverContainer">
+      <img src="Triggui-App-canthurtme.png" alt="Portada del libro" />
     </div>
 
     <button class="shock" id="shockBtn">
@@ -170,6 +180,11 @@
     document.getElementById('shockBtn').addEventListener('click', function () {
       this.innerText = '📚 ¡Gracias por abrir un libro físico!';
       this.classList.add('clicked');
+    });
+
+    document.getElementById('leeBtn').addEventListener('click', function () {
+      const cover = document.getElementById('coverContainer');
+      cover.style.display = cover.style.display === 'flex' ? 'none' : 'flex';
     });
   </script>
 </body>
