--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      background: #fdfdfd;
+      background: #fafafa;
       font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "Segoe UI", Roboto, sans-serif;
       height: 100vh;
       overflow: hidden;
@@ -74,25 +74,20 @@
       height: 33vh;
       border-radius: 22px;
       color: white;
-      font-size: 1.15rem;
+      font-size: 1.2rem;
       font-weight: 600;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
-      box-shadow: 0 8px 18px rgba(0,0,0,0.15);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.12);
       cursor: pointer;
       transition: transform 0.15s ease, opacity 0.15s ease;
       animation: breathing 4.5s ease-in-out infinite;
       text-shadow: 0 1px 2px rgba(0,0,0,0.25);
-      background: linear-gradient(135deg, #56CCF2, #2F80ED);
-      overflow: hidden;
     }
 
-    .block:active {
-      transform: scale(0.96);
-      opacity: 0.88;
-    }
+    .block:active { transform: scale(0.96); opacity: 0.88; }
 
     @keyframes breathing {
       0%, 100% { transform: scale(1); }
@@ -100,7 +95,7 @@
     }
 
     .shock {
-      background: linear-gradient(to right, #6a11cb, #2575fc);
+      background: linear-gradient(to right, #ff6f61, #ff9966);
       color: white;
       font-weight: bold;
       border: none;
@@ -109,12 +104,12 @@
       margin: 10px auto;
       display: block;
       font-size: 0.95rem;
-      box-shadow: 0 4px 8px rgba(106, 17, 203, 0.35);
+      box-shadow: 0 4px 10px rgba(255, 111, 97, 0.3);
       transition: all 0.3s ease;
     }
 
     .shock.clicked {
-      background: linear-gradient(to right, #11998e, #38ef7d);
+      background: linear-gradient(to right, #00c6ff, #0072ff);
     }
 
     .logo-wrapper {
@@ -141,6 +136,17 @@
       object-fit: cover;
       border-radius: 22px;
     }
+
+    .block a {
+      display: block;
+      width: 100%;
+      height: 100%;
+      color: white;
+      text-decoration: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   </style>
 </head>
 <body>
@@ -151,15 +157,18 @@
 
   <div class="main" id="mainContent" style="display:none;">
     <div class="grid">
-      <div class="block" style="background: linear-gradient(135deg, #F2994A, #F2C94C);">Detente</div>
+      <div class="block" style="background: linear-gradient(135deg, #ff9a9e, #fad0c4);">Detente</div>
 
-      <div class="block" id="leeBlock" onclick="toggleLee()">
+      <div class="block" id="leeBlock" onclick="toggleLee()" style="background: linear-gradient(135deg, #89f7fe, #66a6ff);">
         <span id="leeText">Lee</span>
         <img id="leeImage" src="Triggui-App-canthurtme.png" alt="Portada" class="portada-img" style="display:none;" />
       </div>
 
-      <div class="block" style="background: linear-gradient(135deg, #667eea, #764ba2);">?</div>
-      <div class="block" style="background: linear-gradient(135deg, #11998e, #38ef7d);">Conecta</div>
+      <div class="block" style="background: linear-gradient(135deg, #ffecd2, #fcb69f);">
+        <a href="https://www.ted.com/talks/ken_robinson_do_schools_kill_creativity" target="_blank">?</a>
+      </div>
+
+      <div class="block" style="background: linear-gradient(135deg, #c471f5, #fa71cd);">Conecta</div>
     </div>
 
     <button class="shock" id="shockBtn">
