--- a/public/index.html
+++ b/public/index.html
@@ -7,49 +7,41 @@
   <title>Triggui App</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
+
     html, body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #fdfdfd;
+      background: #fefefe;
       color: #333;
       height: 100%;
       display: flex;
       flex-direction: column;
-      overflow-x: hidden;
     }
 
     .main {
+      flex: 1;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 100vh;
-      padding-bottom: 16px;
+      padding: 24px 16px;
     }
 
     .grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      align-items: center;
-      gap: 16px;
-      padding: 16px;
-    }
-
-    @media (min-width: 768px) {
-      .grid {
-        flex-wrap: nowrap;
-        gap: 24px;
-      }
+      gap: 18px;
+      margin-bottom: 12px;
     }
 
     .block {
-      width: 42vw;
-      height: 33vh;
-      min-width: 150px;
-      max-width: 180px;
+      flex: 1 1 42%;
+      max-width: 44%;
+      height: 32vh;
+      min-height: 130px;
       border-radius: 20px;
       color: white;
       font-weight: 600;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -57,12 +49,14 @@
       cursor: pointer;
       transition: all 0.3s ease;
       box-shadow: 0 6px 12px rgba(0,0,0,0.08);
+      position: relative;
     }
 
     @media (min-width: 768px) {
       .block {
-        width: 22vw;
-        height: 32vh;
+        flex: 1 1 22%;
+        max-width: 22%;
+        height: 30vh;
       }
     }
 
@@ -78,7 +72,7 @@
       border: none;
       border-radius: 32px;
       padding: 14px 32px;
-      margin: 14px auto 0;
+      margin: 10px auto 6px;
       display: block;
       font-size: 0.95rem;
       box-shadow: 0 4px 10px rgba(127, 0, 255, 0.3);
@@ -93,8 +87,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-top: 10px;
       gap: 8px;
+      margin-top: 10px;
     }
 
     .imagotipo {
@@ -109,27 +103,27 @@
 
     .accionables {
       position: absolute;
-      top: 12px;
-      width: 100%;
-      text-align: center;
-      font-size: 0.92rem;
+      top: -80px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90%;
+      background: #ffffffdd;
+      color: #222;
+      padding: 12px;
+      border-radius: 12px;
+      font-size: 0.9rem;
       font-weight: 500;
-      color: #444;
-      line-height: 1.4;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       opacity: 0;
-      transition: opacity 0.3s ease;
       pointer-events: none;
+      transition: opacity 0.3s ease;
+      z-index: 10;
     }
 
     .show .accionables {
       opacity: 1;
-    }
-
-    .detente-wrapper {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      pointer-events: auto;
     }
 
     .block a {
@@ -146,22 +140,26 @@
 <body>
   <div class="main">
     <div class="grid">
-      <div class="detente-wrapper" id="detenteWrapper">
+      <div class="block" id="detenteWrapper" style="background: linear-gradient(135deg, #fc466b, #3f5efb);">
         <div class="accionables" id="accionables">
-          ✊ Abraza la incomodidad<br />
-          🧠 Domina tu diálogo interno<br />
+          ✊ Abraza la incomodidad<br>
+          🧠 Domina tu diálogo interno<br>
           🔥 Haz lo que otros no se atreven
         </div>
-        <div class="block" id="detenteBlock" style="background: linear-gradient(135deg, #FF416C, #FF4B2B);">Detente</div>
+        Detente
       </div>
 
-      <div class="block" id="leeBlock" style="background: linear-gradient(135deg, #2193b0, #6dd5ed);">Lee</div>
+      <div class="block" id="leeBlock" style="background: linear-gradient(135deg, #11998e, #38ef7d);">
+        Lee
+      </div>
 
-      <div class="block" style="background: linear-gradient(135deg, #FC466B, #3F5EFB);">
+      <div class="block" style="background: linear-gradient(135deg, #ff6a00, #ee0979);">
         <a href="https://www.ted.com/talks/ken_robinson_do_schools_kill_creativity" target="_blank">?</a>
       </div>
 
-      <div class="block" style="background: linear-gradient(135deg, #00C9FF, #92FE9D);">Conecta</div>
+      <div class="block" style="background: linear-gradient(135deg, #43cea2, #185a9d);">
+        Conecta
+      </div>
     </div>
 
     <button class="shock" id="shockBtn">
@@ -181,11 +179,11 @@
     });
 
     document.getElementById('leeBlock').addEventListener('click', function () {
-      this.style.background = 'linear-gradient(135deg, #F7971E, #FFD200)';
+      this.style.background = 'linear-gradient(135deg, #FFD200, #F7971E)';
     });
 
-    document.getElementById('detenteBlock').addEventListener('click', function () {
-      document.getElementById('detenteWrapper').classList.toggle('show');
+    document.getElementById('detenteWrapper').addEventListener('click', function () {
+      this.classList.toggle('show');
     });
   </script>
 </body>
