--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
   <title>Triggui App</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
-
     html, body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       background: #fefefe;
@@ -22,22 +21,21 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      padding: 24px 16px;
+      padding: 16px;
     }
 
     .grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 18px;
-      margin-bottom: 12px;
+      gap: 12px;
+      flex: 1;
     }
 
     .block {
-      flex: 1 1 42%;
-      max-width: 44%;
-      height: 32vh;
-      min-height: 130px;
+      flex: 1 1 46%;
+      max-width: 48%;
+      height: 42vh;
       border-radius: 20px;
       color: white;
       font-weight: 600;
@@ -48,7 +46,7 @@
       text-align: center;
       cursor: pointer;
       transition: all 0.3s ease;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.08);
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.08);
       position: relative;
     }
 
@@ -56,13 +54,13 @@
       .block {
         flex: 1 1 22%;
         max-width: 22%;
-        height: 30vh;
+        height: 60vh;
       }
     }
 
     .block:hover {
-      transform: scale(1.02);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+      transform: scale(1.015);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
     }
 
     .shock {
@@ -72,7 +70,7 @@
       border: none;
       border-radius: 32px;
       padding: 14px 32px;
-      margin: 10px auto 6px;
+      margin: 18px auto 0;
       display: block;
       font-size: 0.95rem;
       box-shadow: 0 4px 10px rgba(127, 0, 255, 0.3);
@@ -88,7 +86,7 @@
       justify-content: center;
       align-items: center;
       gap: 8px;
-      margin-top: 10px;
+      margin-top: 12px;
     }
 
     .imagotipo {
@@ -103,25 +101,26 @@
 
     .accionables {
       position: absolute;
-      top: -80px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 90%;
-      background: #ffffffdd;
+      inset: 0;
+      padding: 14px;
+      background: rgba(255,255,255,0.88);
       color: #222;
-      padding: 12px;
-      border-radius: 12px;
-      font-size: 0.9rem;
+      font-size: 0.95rem;
       font-weight: 500;
+      border-radius: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      line-height: 1.4;
       text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.3s ease;
-      z-index: 10;
+      z-index: 5;
     }
 
-    .show .accionables {
+    .block.show .accionables {
       opacity: 1;
       pointer-events: auto;
     }
@@ -135,30 +134,35 @@
       justify-content: center;
       align-items: center;
     }
+
+    .label {
+      z-index: 1;
+      position: relative;
+    }
   </style>
 </head>
 <body>
   <div class="main">
     <div class="grid">
-      <div class="block" id="detenteWrapper" style="background: linear-gradient(135deg, #fc466b, #3f5efb);">
+      <div class="block" id="detenteBlock" style="background: linear-gradient(135deg, #fc466b, #3f5efb);">
         <div class="accionables" id="accionables">
           ✊ Abraza la incomodidad<br>
           🧠 Domina tu diálogo interno<br>
           🔥 Haz lo que otros no se atreven
         </div>
-        Detente
+        <span class="label">Detente</span>
       </div>
 
       <div class="block" id="leeBlock" style="background: linear-gradient(135deg, #11998e, #38ef7d);">
-        Lee
+        <span class="label">Lee</span>
       </div>
 
       <div class="block" style="background: linear-gradient(135deg, #ff6a00, #ee0979);">
-        <a href="https://www.ted.com/talks/ken_robinson_do_schools_kill_creativity" target="_blank">?</a>
+        <a href="https://www.ted.com/talks/ken_robinson_do_schools_kill_creativity" target="_blank" class="label">?</a>
       </div>
 
-      <div class="block" style="background: linear-gradient(135deg, #43cea2, #185a9d);">
-        Conecta
+      <div class="block" style="background: linear-gradient(135deg, #00C9FF, #92FE9D);">
+        <span class="label">Conecta</span>
       </div>
     </div>
 
@@ -182,7 +186,7 @@
       this.style.background = 'linear-gradient(135deg, #FFD200, #F7971E)';
     });
 
-    document.getElementById('detenteWrapper').addEventListener('click', function () {
+    document.getElementById('detenteBlock').addEventListener('click', function () {
       this.classList.toggle('show');
     });
   </script>
