--- a/public/index.html
+++ b/public/index.html
@@ -7,35 +7,36 @@
   <title>Triggui App</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
+
     html, body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #fefefe;
+      background: #fdfdfd;
       color: #333;
       height: 100%;
-      display: flex;
-      flex-direction: column;
+      overflow-x: hidden;
     }
 
     .main {
-      flex: 1;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      padding: 16px;
+      height: 100vh;
+      padding: 12px;
     }
 
     .grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 12px;
+      gap: 10px;
       flex: 1;
     }
 
     .block {
-      flex: 1 1 46%;
-      max-width: 48%;
-      height: 42vh;
+      flex: 1 1 47%;
+      max-width: 47%;
+      height: 38vh;
+      min-height: 120px;
       border-radius: 20px;
       color: white;
       font-weight: 600;
@@ -46,7 +47,7 @@
       text-align: center;
       cursor: pointer;
       transition: all 0.3s ease;
-      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 5px 12px rgba(0,0,0,0.07);
       position: relative;
     }
 
@@ -54,13 +55,13 @@
       .block {
         flex: 1 1 22%;
         max-width: 22%;
-        height: 60vh;
+        height: 58vh;
       }
     }
 
     .block:hover {
       transform: scale(1.015);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+      box-shadow: 0 10px 18px rgba(0,0,0,0.08);
     }
 
     .shock {
@@ -70,11 +71,12 @@
       border: none;
       border-radius: 32px;
       padding: 14px 32px;
-      margin: 18px auto 0;
+      margin: 16px auto 0;
       display: block;
       font-size: 0.95rem;
       box-shadow: 0 4px 10px rgba(127, 0, 255, 0.3);
       transition: all 0.3s ease;
+      cursor: pointer;
     }
 
     .shock.clicked {
@@ -86,7 +88,7 @@
       justify-content: center;
       align-items: center;
       gap: 8px;
-      margin-top: 12px;
+      margin-top: 8px;
     }
 
     .imagotipo {
@@ -103,7 +105,7 @@
       position: absolute;
       inset: 0;
       padding: 14px;
-      background: rgba(255,255,255,0.88);
+      background: rgba(255,255,255,0.9);
       color: #222;
       font-size: 0.95rem;
       font-weight: 500;
@@ -144,7 +146,7 @@
 <body>
   <div class="main">
     <div class="grid">
-      <div class="block" id="detenteBlock" style="background: linear-gradient(135deg, #fc466b, #3f5efb);">
+      <div class="block" id="detenteBlock" style="background: linear-gradient(135deg, #ef4d5a, #8e44ad);">
         <div class="accionables" id="accionables">
           ✊ Abraza la incomodidad<br>
           🧠 Domina tu diálogo interno<br>
@@ -153,15 +155,15 @@
         <span class="label">Detente</span>
       </div>
 
-      <div class="block" id="leeBlock" style="background: linear-gradient(135deg, #11998e, #38ef7d);">
+      <div class="block" id="leeBlock" style="background: linear-gradient(135deg, #2193b0, #6dd5ed);">
         <span class="label">Lee</span>
       </div>
 
-      <div class="block" style="background: linear-gradient(135deg, #ff6a00, #ee0979);">
+      <div class="block" style="background: linear-gradient(135deg, #f7971e, #ffd200);">
         <a href="https://www.ted.com/talks/ken_robinson_do_schools_kill_creativity" target="_blank" class="label">?</a>
       </div>
 
-      <div class="block" style="background: linear-gradient(135deg, #00C9FF, #92FE9D);">
+      <div class="block" style="background: linear-gradient(135deg, #00c9ff, #92fe9d);">
         <span class="label">Conecta</span>
       </div>
     </div>
@@ -182,8 +184,15 @@
       this.classList.add('clicked');
     });
 
+    let leeState = false;
     document.getElementById('leeBlock').addEventListener('click', function () {
-      this.style.background = 'linear-gradient(135deg, #FFD200, #F7971E)';
+      if (!leeState) {
+        this.style.background = 'linear-gradient(135deg, #ff9a9e, #fad0c4)';
+        leeState = true;
+      } else {
+        this.style.background = 'linear-gradient(135deg, #2193b0, #6dd5ed)';
+        leeState = false;
+      }
     });
 
     document.getElementById('detenteBlock').addEventListener('click', function () {
