--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,7 @@
     </button>
 
     <div class="logo-wrapper">
-      <img src="imagotipo.png" alt="imagotipo" class="imagotipo" />
+      <img src="/imagotipo.png" alt="imagotipo" class="imagotipo" />
       <img src="trigguiletras.jpg" alt="triggui logo" class="trigguiletras" />
     </div>
   </div>
