--- a/public/index.html
+++ b/public/index.html
@@ -91,13 +91,14 @@
     }
 
     .imagotipo {
-      width: 36px;
-      height: 36px;
+      width: 42px;
+      height: 42px;
+      object-fit: contain;
     }
 
     .trigguiletras {
-      width: 92px;
       height: 24px;
+      object-fit: contain;
     }
 
     .accionables {
@@ -178,7 +179,7 @@
 
     <div class="logo-wrapper">
       <img src="/imagotipo.png" alt="imagotipo" class="imagotipo" />
-      <img src="trigguiletras.jpg" alt="triggui logo" class="trigguiletras" />
+      <img src="/trigguiletras.jpg" alt="triggui logo" class="trigguiletras" />
     </div>
   </div>
 
