--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>Triggui App</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
     html, body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #fdfdfd;
+      background: #fefefe;
       color: #333;
       height: 100%;
-      overflow-x: hidden;
     }
 
     .main {
@@ -58,10 +56,6 @@
       }
     }
 
-    .block:hover {
-      transform: scale(1.01);
-    }
-
     .shock {
       background: linear-gradient(to right, #8e2de2, #4a00e0);
       color: white;
@@ -76,10 +70,6 @@
       transition: all 0.3s ease;
       cursor: pointer;
       white-space: nowrap;
-    }
-
-    .shock.clicked {
-      background: linear-gradient(to right, #00b09b, #96c93d);
     }
 
     .logo-wrapper {
@@ -179,14 +169,13 @@
 
     <div class="logo-wrapper">
       <img src="/imagotipo.png" alt="imagotipo" class="imagotipo" />
-      <img src="/trigguiletras.jpg" alt="triggui logo" class="trigguiletras" />
+      <img src="/trigguiletras.png" alt="triggui logo" class="trigguiletras" />
     </div>
   </div>
 
   <script>
     document.getElementById('shockBtn').addEventListener('click', function () {
       this.innerText = '📘 Bien leído';
-      this.classList.add('clicked');
     });
 
     let leeState = false;
